# cjm-fasthtml-media-gallery

./: README.md  demo_app.py  index.html  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
cjm_fasthtml_media_gallery/: _modidx.py
cjm_fasthtml_media_gallery/components/: controls.py  gallery.py  grid_view.py  list_view.py  players.py  preview.py
cjm_fasthtml_media_gallery/patterns/: pagination.py
cjm_fasthtml_media_gallery/routes/: handlers.py
cjm_fasthtml_media_gallery/serving/: mounter.py
components/: controls.html  controls.html.md  gallery.html  gallery.html.md  grid_view.html  grid_view.html.md  list_view.html  list_view.html.md  players.html  players.html.md  preview.html  preview.html.md
core/: config.html  config.html.md  html_ids.html  html_ids.html.md  icons.html  icons.html.md
nbs/: index.ipynb  nbdev.yml
nbs/components/: controls.ipynb  gallery.ipynb  grid_view.ipynb  list_view.ipynb  players.ipynb  preview.ipynb
nbs/core/: config.ipynb  html_ids.ipynb  icons.ipynb
nbs/patterns/: pagination.ipynb
nbs/routes/: handlers.ipynb
nbs/serving/: mounter.ipynb
patterns/: pagination.html  pagination.html.md
routes/: handlers.html  handlers.html.md
serving/: mounter.html  mounter.html.md
